--- a/app/src/main/res/layout/activity_inisio_sesion.xml
+++ b/app/src/main/res/layout/activity_inisio_sesion.xml
@@ -9,55 +9,77 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_gravity="center"
-        android:layout_margin="15dp"
-        android:gravity="center"
+        android:layout_weight="1"
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="match_parent"
+            android:id="@+id/txNombre4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:text="Usuario:"
-            android:textColor="@android:color/background_dark" />
+            android:layout_weight="1"
+            android:background="@color/common_action_bar_splitter"
+            android:gravity="center"
+            android:padding="15sp"
+            android:text="txNombre"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="@color/common_google_signin_btn_text_dark_focused"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
-        <EditText
-            android:id="@+id/TxUsuario"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:padding="5dp"
-            android:textColor="@android:color/background_dark" />
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:layout_margin="15dp"
+            android:gravity="center"
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:padding="5dp"
-            android:text="Contraseña:"
-            android:textColor="@android:color/background_dark" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:text="Usuario:"
+                android:textColor="@android:color/background_dark" />
 
-        <EditText
-            android:id="@+id/TxPass"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:ems="10"
-            android:inputType="textPassword"
-            android:padding="5dp"
-            android:textColor="@android:color/background_dark" />
+            <EditText
+                android:id="@+id/TxUsuario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:padding="5dp"
+                android:textColor="@android:color/background_dark" />
 
-        <Button
-            android:id="@+id/btninicio"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginRight="30dp"
-            android:text="Iniciar Sesión" />
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:padding="5dp"
+                android:text="Contraseña:"
+                android:textColor="@android:color/background_dark" />
+
+            <EditText
+                android:id="@+id/TxPass"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:ems="10"
+                android:inputType="textPassword"
+                android:padding="5dp"
+                android:textColor="@android:color/background_dark" />
+
+            <Button
+                android:id="@+id/btninicio"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:text="Iniciar Sesión" />
+        </LinearLayout>
     </LinearLayout>
+
 </LinearLayout>
